--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -19,7 +19,7 @@ env:
   # otherwise, NPM gives EACCES error trying to mkdir /github/home/.npm
   # Using the /isolated_build/ folder (inside the container) keeps permissions straight
   npm_config_cache: /isolated_build/.npm-cache
-  EXPO_CLI_HOME: /isolated_build/repo/.expo
+  EXPO_CLI_HOME: /isolated_build/.expo
   HOME: /isolated_build/
 
 jobs:
@@ -113,119 +113,119 @@ jobs:
       - name: Check HOME in next step
         run: |
           echo "HOME in next step: $HOME"
-      - name: Set HOME in GITHUB_ENV
+      # - name: Set HOME in GITHUB_ENV
+      #   run: |
+      #     echo "HOME before: $HOME"
+      #     echo "HOME=/isolated_build/repo/home" >> $GITHUB_ENV
+      #     echo "HOME after: $HOME"
+      # - name: Check HOME in next step
+      #   run: |
+      #     echo "HOME in next step: $HOME"          
+
+      - name: Build Date String
+        id: date_str
+        run: echo "::set-output name=stdout::$(date -u +%Y-%m-%d-%H%M%S%z)"
+
+      - name: Install NPM version & Build Common
         run: |
-          echo "HOME before: $HOME"
-          echo "HOME=/isolated_build/repo/home" >> $GITHUB_ENV
-          echo "HOME after: $HOME"
-      - name: Check HOME in next step
+          set -x  # echo commands names
+          npm install -g npm@$NPM_VERSION
+          npm ci
+          npx tsc
+        working-directory: /isolated_build/repo/common
+
+      - name: Prepare mobile build environment
         run: |
-          echo "HOME in next step: $HOME"          
+          npm uninstall @cbr/common
+          COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
+          npm install $COMMON_PACK_NAME
+          npm ci
+          npx prettier --check .
+        working-directory: /isolated_build/repo/mobile
 
-  #     - name: Build Date String
-  #       id: date_str
-  #       run: echo "::set-output name=stdout::$(date -u +%Y-%m-%d-%H%M%S%z)"
-
-  #     - name: Install NPM version & Build Common
-  #       run: |
-  #         set -x  # echo commands names
-  #         npm install -g npm@$NPM_VERSION
-  #         npm ci
-  #         npx tsc
-  #       working-directory: /isolated_build/repo/common
-
-  #     - name: Prepare mobile build environment
-  #       run: |
-  #         npm uninstall @cbr/common
-  #         COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
-  #         npm install $COMMON_PACK_NAME
-  #         npm ci
-  #         npx prettier --check .
-  #       working-directory: /isolated_build/repo/mobile
-
-  #     - name: Run TypeScript compiler
-  #       run: npx tsc --noEmit
-  #       working-directory: /isolated_build/repo/mobile
+      - name: Run TypeScript compiler
+        run: npx tsc --noEmit
+        working-directory: /isolated_build/repo/mobile
         
-  #     - name: Create Expo home
-  #       run: mkdir -p /isolated_build/.expo
+      - name: Create Expo home
+        run: mkdir -p /isolated_build/.expo
 
-  #     # todosd: remove need for sudo?
-  #     - name: Prebuild android folder
-  #       run: sudo npm run prebuild
-  #       working-directory: /isolated_build/repo/mobile
+      # todosd: remove need for sudo?
+      - name: Prebuild android folder
+        run: sudo npm run prebuild
+        working-directory: /isolated_build/repo/mobile
 
-  #     - name: Setup Release Keystore for Play Store
-  #       run: |
-  #         set -x  # echo commands names
-  #         mkdir -p $GRADLE_USER_HOME
-  #         echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_GRADLEPROP }}" > $GRADLE_USER_HOME/gradle.properties
-  #         echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_FILE_B64 }}" > ./cbr-upload-key.keystore.b64
-  #         base64 -d ./cbr-upload-key.keystore.b64 > ./cbr-upload-key.keystore
-  #         echo "Date String: ${{ steps.date_str.outputs.stdout }}"
-  #       working-directory: /isolated_build/repo/mobile/android/app
+      - name: Setup Release Keystore for Play Store
+        run: |
+          set -x  # echo commands names
+          mkdir -p $GRADLE_USER_HOME
+          echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_GRADLEPROP }}" > $GRADLE_USER_HOME/gradle.properties
+          echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_FILE_B64 }}" > ./cbr-upload-key.keystore.b64
+          base64 -d ./cbr-upload-key.keystore.b64 > ./cbr-upload-key.keystore
+          echo "Date String: ${{ steps.date_str.outputs.stdout }}"
+        working-directory: /isolated_build/repo/mobile/android/app
 
-  #     # NOTE: Artifact upload *was previously* disabled because builds from the CI/CD server seem
-  #     #       to not work. Specifically, creating a client on mobile and then
-  #     #       trying to sync results in a "Inalid Date" sync error.
-  #     #       Since these builds cannot be trusted, they are disabled.
-  #     #       Instead, the builds must be done locally.
-  #     # - uses: actions/upload-artifact@v3
-  #     #   with:
-  #     #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Dev.apk"
-  #     #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-  #     #     retention-days: 60
-  #     #     if-no-files-found: error
+      # NOTE: Artifact upload *was previously* disabled because builds from the CI/CD server seem
+      #       to not work. Specifically, creating a client on mobile and then
+      #       trying to sync results in a "Inalid Date" sync error.
+      #       Since these builds cannot be trusted, they are disabled.
+      #       Instead, the builds must be done locally.
+      # - uses: actions/upload-artifact@v3
+      #   with:
+      #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Dev.apk"
+      #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+      #     retention-days: 60
+      #     if-no-files-found: error
 
-  #     - name: Build AAB for Play Store (Targeting Production Server)
-  #       run: |
-  #         rm -f /isolated_build/repo/mobile/android/app/build/outputs/bundle/release/app-release.aab
-  #         npm run build-aab prod
-  #       working-directory: /isolated_build/repo/mobile
-  #     - uses: actions/upload-artifact@v3
-  #       with:
-  #         name: 'CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Prod.aab'
-  #         path: /isolated_build/repo/mobile/android/app/build/outputs/bundle/release/app-release.aab
-  #         retention-days: 60
-  #         if-no-files-found: error
+      - name: Build AAB for Play Store (Targeting Production Server)
+        run: |
+          rm -f /isolated_build/repo/mobile/android/app/build/outputs/bundle/release/app-release.aab
+          npm run build-aab prod
+        working-directory: /isolated_build/repo/mobile
+      - uses: actions/upload-artifact@v3
+        with:
+          name: 'CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Prod.aab'
+          path: /isolated_build/repo/mobile/android/app/build/outputs/bundle/release/app-release.aab
+          retention-days: 60
+          if-no-files-found: error
 
-  #   # # Only build the APK targeting the development server because it can be retargeted to other servers.
-  #   # # (This saves about 10 minutes on the CI/CD build because the SFU GitHub server is very slow on upload)
-  #   # - name: Build APK (Targeting Local Server)
-  #   #   run:  |
-  #   #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-  #   #     npm run build-apk local
-  #   #   working-directory: /isolated_build/repo/mobile
-  #   # - uses: actions/upload-artifact@v3
-  #   #   with:
-  #   #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Local.apk"
-  #   #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-  #   #     retention-days: 60
-  #   #     if-no-files-found: error
+    # # Only build the APK targeting the development server because it can be retargeted to other servers.
+    # # (This saves about 10 minutes on the CI/CD build because the SFU GitHub server is very slow on upload)
+    # - name: Build APK (Targeting Local Server)
+    #   run:  |
+    #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+    #     npm run build-apk local
+    #   working-directory: /isolated_build/repo/mobile
+    # - uses: actions/upload-artifact@v3
+    #   with:
+    #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Local.apk"
+    #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+    #     retention-days: 60
+    #     if-no-files-found: error
 
-  #   # - name: Build APK (Targeting Staging Server)
-  #   #   run:  |
-  #   #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-  #   #     npm run build-apk staging
-  #   #   working-directory: /isolated_build/repo/mobile
-  #   # - uses: actions/upload-artifact@v3
-  #   #   with:
-  #   #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Staging.apk"
-  #   #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-  #   #     retention-days: 60
-  #   #     if-no-files-found: error
+    # - name: Build APK (Targeting Staging Server)
+    #   run:  |
+    #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+    #     npm run build-apk staging
+    #   working-directory: /isolated_build/repo/mobile
+    # - uses: actions/upload-artifact@v3
+    #   with:
+    #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Staging.apk"
+    #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+    #     retention-days: 60
+    #     if-no-files-found: error
 
-  #   # - name: Build APK (Targeting Production Server)
-  #   #   run:  |
-  #   #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-  #   #     npm run build-apk prod
-  #   #   working-directory: /isolated_build/repo/mobile
-  #   # - uses: actions/upload-artifact@v3
-  #   #   with:
-  #   #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Prod.apk"
-  #   #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-  #   #     retention-days: 60
-  #   #     if-no-files-found: error
+    # - name: Build APK (Targeting Production Server)
+    #   run:  |
+    #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+    #     npm run build-apk prod
+    #   working-directory: /isolated_build/repo/mobile
+    # - uses: actions/upload-artifact@v3
+    #   with:
+    #     name: "CBR-Mobile-${{ steps.date_str.outputs.stdout }}-Prod.apk"
+    #     path: /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+    #     retention-days: 60
+    #     if-no-files-found: error
 
   # build-web:
   #   runs-on: [self-hosted, docker]
